--- a/index.html
+++ b/index.html
@@ -12,6 +12,40 @@
   <title>Jumping Knick-knacks</title>
 </head>
 <body>
+  <div class="wrapperPopUp__one">
+    <div class="EnterPopUp">
+      <form action="">
+        <h2>Войти</h2>
+        <div class="emailSend">
+          <input class="emailPopUp" type="email" placeholder="email или номер телефона">
+        </div>
+        <div class="emailSend">
+          <input class="passwordPopUp" type="email" placeholder="Пароль">
+        </div>
+        <div>
+          <input class="subPopUp" type="submit" value="Войти">
+        </div>
+        <a class="aReg">Зарегистрироваться</a>
+      </form>
+    </div>
+  </div>
+  <div class="wrapperPopUp__two">
+    <div class="EnterPopUp">
+      <form action="">
+        <h2>Зарегистрироватся</h2>
+        <div class="emailSend">
+          <input class="emailPopUp" type="email" placeholder="email или номер телефона">
+        </div>
+        <div class="emailSend">
+          <input class="passwordPopUp" type="email" placeholder="Пароль">
+        </div>
+        <div>
+          <input class="subPopUp" type="submit" value="Создать">
+        </div>
+        <a class="aEnt">Войти</a>
+      </form>
+    </div>
+  </div>
   <header>
     <section class="withSection">
       <div class="headerSection">
