--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <input class="emailPopUp" type="email" placeholder="email или номер телефона">
         </div>
         <div class="emailSend">
-          <input class="passwordPopUp" type="email" placeholder="Пароль">
+          <input class="passwordPopUp" type="password" placeholder="Пароль">
         </div>
         <div>
           <input class="subPopUp" type="submit" value="Войти">
@@ -37,7 +37,7 @@
           <input class="emailPopUp" type="email" placeholder="email или номер телефона">
         </div>
         <div class="emailSend">
-          <input class="passwordPopUp" type="email" placeholder="Пароль">
+          <input class="passwordPopUp" type="password" placeholder="Пароль">
         </div>
         <div>
           <input class="subPopUp" type="submit" value="Создать">
