--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="wrapperPopUp__one">
-    <div class="EnterPopUp">
+    <div class="enterPopUp">
       <form action="">
         <h2>Войти</h2>
         <div class="emailSend">
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="wrapperPopUp__two">
-    <div class="EnterPopUp">
+    <div class="enterPopUp">
       <form action="">
         <h2>Зарегистрироватся</h2>
         <div class="emailSend">
@@ -46,6 +46,7 @@
       </form>
     </div>
   </div>
+  <!-- Header -->
   <header>
     <section class="withSection">
       <div class="headerSection">
